creación de base por marcado

--- a/nasdaq.ipynb
+++ b/nasdaq.ipynb
@@ -959,7 +959,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 47,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "stock_prices_sp500 S&P 500\n",
+            "stock_prices_nasdaq NASDAQ\n"
+          ]
+        }
+      ],
+      "source": [
+        "# dic = {\n",
+        "#     \"stock_prices_sp500\": \"S&P 500\",\n",
+        "#     \"stock_prices_nasdaq\": \"NASDAQ\"\n",
+        "# }\n",
+        "\n",
+        "\n",
+        "# for base, mercado in dic.items():\n",
+        "#     print(base, mercado)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -6211,6 +6236,7 @@
       "source": [
         "# mercado\n",
         "mercados = ['NASDAQ']\n",
+        "database = [\"stock_prices_sp500\", \"stock_prices_nasdaq\"]\n",
         "# dataframe con compañias y id\n",
         "company_map = db.execute_query(\"SELECT company_id, symbol FROM companies\")\n",
         "for mercado in mercados: \n",
@@ -6267,10 +6293,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "db.close()"
+      ]
     },
     {
       "cell_type": "code",
